<resources>
    <string name="app_name">FieldTest</string>
    <string name="title_activity_main">FieldTest</string>
    <string name="record_new_test_title">Record new test</string>
    <string name="negative">Negative</string>
    <string name="positive">Positive</string>
    <string name="inconclusive">Inconclusive</string>
    <string name="dashboard">Dashboard</string>
    <string name="map">Map</string>
    <string name="trends">Trends</string>
    <string name="symptom_5">Comorbidity 5</string>
    <string name="symptom_4">Comorbidity 4</string>
    <string name="symptom_3">Comorbidity 3</string>
    <string name="symptom_2">Comorbidity 2</string>
    <string name="symptom_1">Comorbidity 1</string>
    <string name="save_test">Save Test</string>
    <string name="na">N/A</string>
    <string name="date_time">Date Time</string>
    <string name="view">View</string>
    <string name="edit_test">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="view_test_results">View Test Results</string>
    <string name="location">Location</string>
    <string name="test_date">Test Date</string>
    <string name="test_notes">Test Notes</string>
    <string name="ethnicity">Ethnicity</string>
    <string name="sex">Sex</string>
    <string name="test_result">Test Result</string>
    <string name="patient_id">Patient ID</string>
    <string name="test_id">Test ID</string>
    <string name="age_group">Age Group</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="test_summary">Test Summary</string>
    <string name="permission_denied_location">Location permissions required for testing and location services.</string>
    <string name="close">CLOSE</string>
    <string name="permission_denied_test">Location permission required to record tests.</string>
    <string name="return_snackbar">RETURN</string>
    <string name="no_data_graph">No data added yet.</string>
    <string name="min_5_digits">Please enter min 5 digits</string>
    <string name="please_choose_result">Please choose test result</string>
    <string name="please_choose_sex">Please choose patient sex</string>
    <string name="please_choose_age">Please choose patient age group</string>
    <string name="please_choose_ethnicity">Please choose patient ethnicity</string>
    <string name="comorbidities">Comorbidities</string>
    <string name="edit_test_button">Edit Test Button</string>
    <string name="save_test_button">Save Test button</string>
    <string name="view_test_button">View Test button</string>
    <string name="expand_positive_tests_button">Expand positive tests button</string>
    <string name="expand_negative_tests_button">Expand negative tests button</string>
    <string name="expand_inconclusive_tests_button">Expand inconclusive tests button</string>
    <string name="add_new_test_button">Add new test button</string>
    <string name="chart_of_test_trends_over_time">Chart of test trends over time</string>
    <string name="map_of_test_data">Map of test data</string>
</resources>