<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LocationFragment">
    <com.google.android.gms.maps.MapView
        android:name="com.google.android.gms.maps.MapFragment"
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/map_of_test_data"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@android:color/white"
        android:layout_margin="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:elevation="8dp"
        android:orientation="vertical">
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/filter_checkbox_positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/positive"
            android:checked="true"/>
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/filter_checkbox_negative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/negative"
            android:checked="true"/>
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/filter_checkbox_inconclusive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inconclusive"
            android:checked="true"/>
    </LinearLayout>


</FrameLayout>