<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/expandable_listview_child_linearlayout"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:paddingTop="12dp"
    android:paddingBottom="12dp"
    android:orientation="horizontal">
    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textSize="14sp"
        android:gravity="center_vertical"
        android:id="@+id/recyclerview_textview_testId"
        tools:text="@string/test_id"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textSize="14sp"
        android:gravity="center_vertical"
        android:id="@+id/recyclerview_textview_patientId"
        tools:text="@string/patient_id"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textSize="14sp"
        android:gravity="center_vertical"
        android:id="@+id/recyclerview_textview_datetime"
        tools:text="@string/date_time"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textSize="14sp"
        android:gravity="center_vertical"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:id="@+id/recyclerview_viewtest_button"
        android:text="@string/view"/>
</LinearLayout>