<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:background="@drawable/widget_background"
    android:padding="@dimen/widget_margin"
    android:id="@+id/test_summary_widget_layout"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_summary"
        android:fontFamily="@font/comfortaa_regular"
        android:textColor="@color/colorPrimary"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="12dp"
        android:textSize="18sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp">
    <RelativeLayout
        style="@style/DashboardProgressWheelContainer"
        android:background="@drawable/widget_positive_circle"
        android:layout_margin="12dp">
        <TextView
            android:id="@+id/wheel_progress_positive_text"
            style="@style/DashboardProgressCounterText"
            android:textColor="@android:color/white"/>
        <TextView
            android:id="@+id/wheel_progress_positive_definition"
            style="@style/DashboardProgressDefinitionText"
            android:paddingTop="32dp"
            android:textSize="14sp"
            android:text="@string/positive"
            android:textColor="@android:color/white"/>
    </RelativeLayout>
    <RelativeLayout
        style="@style/DashboardProgressWheelContainer"
        android:background="@drawable/widget_negative_circle"
        android:layout_margin="12dp">
        <TextView
            android:id="@+id/wheel_progress_negative_text"
            style="@style/DashboardProgressCounterText"
            android:textColor="@android:color/white"/>
        <TextView
            android:id="@+id/wheel_progress_negative_definition"
            style="@style/DashboardProgressDefinitionText"
            android:paddingTop="32dp"
            android:textSize="14sp"
            android:text="@string/negative"
            android:textColor="@android:color/white"/>
    </RelativeLayout>
    <RelativeLayout
        style="@style/DashboardProgressWheelContainer"
        android:background="@drawable/widget_inconclusive_circle"
        android:layout_margin="12dp">
        <TextView
            android:id="@+id/wheel_progress_inconclusive_text"
            style="@style/DashboardProgressCounterText"
            android:textColor="@android:color/white"/>
        <TextView
            android:id="@+id/wheel_progress_inconclusive_definition"
            style="@style/DashboardProgressDefinitionText"
            android:paddingTop="32dp"
            android:textSize="14sp"
            android:text="@string/inconclusive"
            android:textColor="@android:color/white"/>
    </RelativeLayout>
</LinearLayout>
</LinearLayout>