<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.RecordTestActivity"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/patient_id_edittext_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:hint="@string/patient_id">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/patient_id_edittext_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <Spinner
            android:id="@+id/test_result_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/patient_id_edittext_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="16dp"
            android:spinnerMode="dialog"
            android:background="#E0E0E0"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"/>
        <LinearLayout
            android:id="@+id/sex_age_spinner_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/test_result_spinner"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent">
        <Spinner
            android:id="@+id/sex_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:spinnerMode="dialog"
            android:background="#E0E0E0"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"/>
        <Spinner
            android:id="@+id/age_group_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:spinnerMode="dialog"
            android:background="#E0E0E0"
            tools:text="Age group"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"/>
        </LinearLayout>
        <Spinner
            android:id="@+id/ethnicity_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/sex_age_spinner_linearlayout"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="16dp"
            android:spinnerMode="dialog"
            android:background="#E0E0E0"
            tools:text="Ethnicity"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/comorbidities_checkbox_symptom1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ethnicity_spinner"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/symptom_1"
            android:layout_marginTop="16dp"
            android:textColor="#aa000000"
            android:paddingStart="8dp"
            android:textSize="16dp"/>
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/comorbidities_checkbox_symptom2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/comorbidities_checkbox_symptom1"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/symptom_2"
            android:textColor="#aa000000"
            android:paddingStart="8dp"
            android:textSize="16dp"/>
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/comorbidities_checkbox_symptom3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/comorbidities_checkbox_symptom2"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/symptom_3"
            android:textColor="#aa000000"
            android:paddingStart="8dp"
            android:textSize="16dp"/>
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/comorbidities_checkbox_symptom4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/comorbidities_checkbox_symptom3"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/symptom_4"
            android:textColor="#aa000000"
            android:paddingStart="8dp"
            android:textSize="16dp"/>
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/comorbidities_checkbox_symptom5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/comorbidities_checkbox_symptom4"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/symptom_5"
            android:textColor="#aa000000"
            android:paddingStart="8dp"
            android:textSize="16dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/test_notes_edittext_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/comorbidities_checkbox_symptom5"
            app:layout_constraintLeft_toLeftOf="parent"
            android:hint="@string/test_notes">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/test_notes_edittext_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:minLines="5"
                android:gravity="top"
                android:paddingTop="16dp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_test_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/test_notes_edittext_layout"
            android:text="@string/save_test"
            android:textStyle="bold"
            android:textSize="18sp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>